[package]
name = "multi-party-sig"
version = "0.1.0"
authors = [ ]

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.curv]
package = "curv-kzen"
version = "0.7"
default-features = false

[dependencies.centipede]
git = "https://github.com/KZen-networks/centipede"
tag = "v0.2.12"
default-features = false

[dev-dependencies]
hex = "0.3.2"

[features]
default = ["curv/rust-gmp-kzen"]
